--- a/README.asciidoc
+++ b/README.asciidoc
@@ -97,6 +97,9 @@ Your solution should focus on **maintainability**, **reusability** and
 
 6. You may use additional third-party dependencies as you see fit. Please include your reasoning for your choice of libraries in your solution.
 
+OpenCSV: used for reading CSV Files
+log4j: used for logging
+
 == Getting started
 
 === Install Java
